--- a/HUAWEI P30 PRO/Venetian.html
+++ b/HUAWEI P30 PRO/Venetian.html
@@ -2220,10 +2220,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i93 { opacity: 1; }
 /*#/#*//*#i93.i94.positioning.css:positioning/base/css.2*/
 #i93 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 162px; height: 43px;
-        -ms-transform: translate(0, 0) translate(80px, 303px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(80px, 303px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(80px, 303px) rotate(0deg);
-        transform: translate(0, 0) translate(80px, 303px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(77px, 301px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(77px, 301px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(77px, 301px) rotate(0deg);
+        transform: translate(0, 0) translate(77px, 301px) rotate(0deg);
 }
 /*#/#*//*#i115.image.css:image/base/css*/
 #i115 { opacity: 1; }
@@ -2320,7 +2320,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/MOIktyi.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/QWs3yeJ.gif"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/D4ZlR9c.gif"></dataimg>
 <!--#/#--><!--#i2.i95.slice-image.html:slice-image/html.1-->
 <dataimg id="i95" src="https://i.imgur.com/DPy6Lgy.jpg"></dataimg>
 <!--#/#-->
@@ -2508,7 +2508,7 @@ name: hymotQK.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: MOIktyi.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: QWs3yeJ.gif; fileId: ; sourceTypeId: externalUrl;
+name: D4ZlR9c.gif; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i95.slice-image.meta:slice-image/meta.1*/
 name: DPy6Lgy.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
