--- a/Beat3/Cube.html
+++ b/Beat3/Cube.html
@@ -872,7 +872,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i130" src="https://i.imgur.com/tfwdj3N.jpg"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/ocSzabB.png"/>
-<!--#/#--><!--#i4.i380.image.html:image/html-->
+<!--#/#--><!--#i4.i380.image.html:image/html
 <img id="i380" src="https://i.imgur.com/PuxJURZ.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
