--- a/Beat3/Fade320x480.html
+++ b/Beat3/Fade320x480.html
@@ -7,13 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="ad.size" content="width=320, height=480" />
     <title>320x480 -bf</title>
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i' rel='stylesheet' type='text/css'>
-    <link href="https://fonts.googleapis.com/css?family=Source Sans Pro:300,700,900" rel="stylesheet">
     <style>
+
+        @font-face {
+  font-family: Roboto-Condensed;
+  src: url(Roboto-Condensed.woff);
+}
         body.bf {
             background-color: #FFFFFF;
             color: black;
-            font-family: Source Sans Pro;
+           font-family: Roboto-Condensed;
             margin: 0;
             padding: 0;
         }
@@ -28,7 +31,7 @@
             position:absolute;
             overflow:hidden;
             cursor: pointer;
-            font-family: Source Sans Pro;
+            font-family: Roboto-Condensed;
             border: 1px solid #c5c5c5
                 
         }
@@ -274,7 +277,7 @@
             width: 70px;
             display: inline-block;
             float: right;
-             font-family: 'Source Sans Pro', sans-serif;
+             font-family: Roboto-Condensed;
         }
 
         .bf_button {
