--- a/ADIDAS 03/Cube_Mujer.html
+++ b/ADIDAS 03/Cube_Mujer.html
@@ -936,7 +936,7 @@ var el = document.getElementById('i91');
 
 el.addEventListener('click', function(e){
     /*#i288.i289.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.adidas.mx/ultraboost'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.adidas.mx/pulseboost-mujer'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -964,7 +964,7 @@ var el = document.getElementById('i95');
 
 el.addEventListener('click', function(e){
     /*#i312.i313.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.adidas.mx/ultraboost'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.adidas.mx/pulseboost-mujer', '_blank'));
 /*#/#*/
 });
 
