--- a/ADIDAS 03/Venetian_Mujer.html
+++ b/ADIDAS 03/Venetian_Mujer.html
@@ -2460,7 +2460,7 @@ var el = document.getElementById('i93');
 
 el.addEventListener('click', function(e){
     /*#i95.i96.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.adidas.mx/ultraboost'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.adidas.mx/pulseboost-mujer'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
