--- a/ADIDAS 03/Cube_Hombre.html
+++ b/ADIDAS 03/Cube_Hombre.html
@@ -863,7 +863,7 @@ url('fonts/') format('svg');
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i380.text.html:text/html-->
-<div id="i380">Y disfruta la experiencia de correr
+<div id="i380">Disfruta la experiencia de correr
 en las calles de México.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/DT0yIH5.gif"/>
@@ -880,7 +880,7 @@ en las calles de México.</div>
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">¡Tienes tus nuevas VANS a la vuelta de la esquina!</div>
+<div id="i34"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/67EXdpH.jpg"/>
 <!--#/#--><!--#i6.i382.image.html:image/html-->
