--- a/Beat3/Fade320x480.html
+++ b/Beat3/Fade320x480.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="ad.size" content="width=320, height=480" />
     <title>320x480</title>
-    <link href="https://fonts.google.com/specimen/Roboto" rel=stylesheet>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i" rel=stylesheet>
     <style>
 
     
@@ -148,7 +148,7 @@
         }
 
         .bf_text_bold {
-            font-weight: 700;
+            font-weight: 600;
             font-family: "Roboto";
         }
 
