--- a/Beat3/Fade320x480.html
+++ b/Beat3/Fade320x480.html
@@ -118,7 +118,7 @@
 
         .bf_text {
             position: absolute;
-            top: 75%;
+            top: 74%;
             left: 7.5px;
             width: 98%;
             padding: 0.3em;
@@ -352,7 +352,7 @@
            
         </div>
         <div class="bf_text"> 
-            <span class="bf_text_title bf_text_bold">
+            <span class="bf_text_title bf_text_medium">
               ¿Quiéres llegar lejos?<br> Te Llevamos. Muévelo 
             </span>
             <br/>  
