--- a/Beat3/FadeBig2.html
+++ b/Beat3/FadeBig2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="ad.size" content="width=300, height=600" />
-     <link href="https://fonts.google.com/specimen/Roboto" rel=stylesheet>
+     <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i" rel=stylesheet>
     <title>Fade_300x600</title>
    
     <style>
@@ -133,7 +133,7 @@
         .tgx_text {
             position: absolute;
             top: 80%;
-            left: 5px;
+            left: 25px;
             width: 99%;
             padding: 0.3em;
             line-height: 1.0em;
@@ -148,9 +148,9 @@
             width: 98%;
             margin-bottom: -20px;
             text-align: center;
-            margin-left: -5px;
+            margin-left: -22px;
             line-height: 1.1em;
-            margin-top: -24px;
+            margin-top: -32px;
             color: #15123e;
             font-family: "Roboto";
                 
@@ -164,7 +164,6 @@
         .tgx_text_medium {
             font-weight: 700;
             color: #15123e;
-            font-family: "Roboto";
         }
 
         .tgx_text_bold {
@@ -354,11 +353,11 @@
         </div>
        
         <div class="tgx_text"> 
-            <span class="tgx_text_title tgx_text_bold">
+            <span class="tgx_text_title tgx_text_medium">
              ¡Descarga Beat!
             </span>
             <br/>
-             <span class="tgx_text tgx_text_small" style="margin-top:-25px; margin-left: -5px; font-size: 125%;">
+             <span class="tgx_text" style="margin-top:-20px; margin-left: 5px; font-size: 125%;">
                 <p>Y viaja por la ciudad. <br> Viajes desde $4,400.</p>
             </span>
   
