--- a/Beat3/Fade320x480.html
+++ b/Beat3/Fade320x480.html
@@ -353,7 +353,7 @@
         </div>
         <div class="bf_text"> 
             <span class="bf_text_title bf_text_medium">
-              ¿Quiéres llegar lejos?<br> Te Llevamos. Muévelo 
+              ¿Quieres llegar lejos?<br> Te Llevamos. Muévelo 
             </span>
             <br/>  
           <!--  <span class="bf_text_light bf_text_small" style="color:black;">
