--- a/Beat3/Fade320x480.html
+++ b/Beat3/Fade320x480.html
@@ -73,7 +73,7 @@
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/DjBgKJE.jpg");
+            background: url("https://i.imgur.com/4WJoZcz.jpg");
             background-size: cover;
           
         }
