--- a/ADIDAS 03/Cube_Mujer.html
+++ b/ADIDAS 03/Cube_Mujer.html
@@ -662,20 +662,20 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i286.image.css:image/base/css*/
 #i286 { opacity: 1; }
 /*#/#*//*#i286.i287.positioning.css:positioning/base/css.2*/
-#i286 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 172px; height: 46px;
-        -ms-transform: translate(0, 0) translate(67px, 144px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(67px, 144px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(67px, 144px) rotate(0deg);
-        transform: translate(0, 0) translate(67px, 144px) rotate(0deg);
+#i286 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 169px; height: 45px;
+        -ms-transform: translate(0, 0) translate(64px, 144px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(64px, 144px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(64px, 144px) rotate(0deg);
+        transform: translate(0, 0) translate(64px, 144px) rotate(0deg);
 }
 /*#/#*//*#i4.i181.image.css:image/base/css*/
 #i181 { opacity: 1; }
 /*#/#*//*#i181.i182.positioning.css:positioning/base/css.2*/
-#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 58px; height: 39px;
-        -ms-transform: translate(0, 0) translate(236px, 205px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(236px, 205px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(236px, 205px) rotate(0deg);
-        transform: translate(0, 0) translate(236px, 205px) rotate(0deg);
+#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 52px; height: 35px;
+        -ms-transform: translate(0, 0) translate(243px, 210px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(243px, 210px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(243px, 210px) rotate(0deg);
+        transform: translate(0, 0) translate(243px, 210px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -717,23 +717,23 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i5.i376.image.css:image/base/css*/
-#i376 { opacity: 1; }
-/*#/#*//*#i376.i377.positioning.css:positioning/base/css.2*/
-#i376 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 58px; height: 39px;
-        -ms-transform: translate(0, 0) translate(236px, 205px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(236px, 205px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(236px, 205px) rotate(0deg);
-        transform: translate(0, 0) translate(236px, 205px) rotate(0deg);
+/*#/#*//*#i5.i390.image.css:image/base/css*/
+#i390 { opacity: 1; }
+/*#/#*//*#i390.i391.positioning.css:positioning/base/css.2*/
+#i390 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 169px; height: 45px;
+        -ms-transform: translate(0, 0) translate(64px, 144px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(64px, 144px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(64px, 144px) rotate(0deg);
+        transform: translate(0, 0) translate(64px, 144px) rotate(0deg);
 }
-/*#/#*//*#i5.i378.image.css:image/base/css*/
-#i378 { opacity: 1; }
-/*#/#*//*#i378.i379.positioning.css:positioning/base/css.2*/
-#i378 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 172px; height: 46px;
-        -ms-transform: translate(0, 0) translate(67px, 144px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(67px, 144px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(67px, 144px) rotate(0deg);
-        transform: translate(0, 0) translate(67px, 144px) rotate(0deg);
+/*#/#*//*#i5.i392.image.css:image/base/css*/
+#i392 { opacity: 1; }
+/*#/#*//*#i392.i393.positioning.css:positioning/base/css.2*/
+#i392 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 52px; height: 35px;
+        -ms-transform: translate(0, 0) translate(243px, 210px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(243px, 210px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(243px, 210px) rotate(0deg);
+        transform: translate(0, 0) translate(243px, 210px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -766,32 +766,32 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i6.i382.image.css:image/base/css*/
-#i382 { opacity: 1; }
-/*#/#*//*#i382.i383.positioning.css:positioning/base/css.2*/
-#i382 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 58px; height: 39px;
-        -ms-transform: translate(0, 0) translate(236px, 205px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(236px, 205px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(236px, 205px) rotate(0deg);
-        transform: translate(0, 0) translate(236px, 205px) rotate(0deg);
+/*#/#*//*#i6.i396.image.css:image/base/css*/
+#i396 { opacity: 1; }
+/*#/#*//*#i396.i397.positioning.css:positioning/base/css.2*/
+#i396 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 169px; height: 45px;
+        -ms-transform: translate(0, 0) translate(64px, 118px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(64px, 118px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(64px, 118px) rotate(0deg);
+        transform: translate(0, 0) translate(64px, 118px) rotate(0deg);
 }
-/*#/#*//*#i6.i384.image.css:image/base/css*/
-#i384 { opacity: 1; }
-/*#/#*//*#i384.i385.positioning.css:positioning/base/css.2*/
-#i384 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 172px; height: 46px;
-        -ms-transform: translate(0, 0) translate(67px, 122px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(67px, 122px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(67px, 122px) rotate(0deg);
-        transform: translate(0, 0) translate(67px, 122px) rotate(0deg);
+/*#/#*//*#i6.i394.image.css:image/base/css*/
+#i394 { opacity: 1; }
+/*#/#*//*#i394.i395.positioning.css:positioning/base/css.2*/
+#i394 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 52px; height: 35px;
+        -ms-transform: translate(0, 0) translate(243px, 210px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(243px, 210px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(243px, 210px) rotate(0deg);
+        transform: translate(0, 0) translate(243px, 210px) rotate(0deg);
 }
-/*#/#*//*#i6.i386.image.css:image/base/css*/
-#i386 { opacity: 1; }
-/*#/#*//*#i386.i387.positioning.css:positioning/base/css.2*/
-#i386 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 41px; height: 41px;
-        -ms-transform: translate(0, 0) translate(52px, 180px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(52px, 180px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(52px, 180px) rotate(0deg);
-        transform: translate(0, 0) translate(52px, 180px) rotate(0deg);
+/*#/#*//*#i6.i398.image.css:image/base/css*/
+#i398 { opacity: 1; }
+/*#/#*//*#i398.i399.positioning.css:positioning/base/css.2*/
+#i398 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 46px; height: 46px;
+        -ms-transform: translate(0, 0) translate(44px, 182px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(44px, 182px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(44px, 182px) rotate(0deg);
+        transform: translate(0, 0) translate(44px, 182px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -843,9 +843,9 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/0tCj6aF.jpg"/>
 <!--#/#--><!--#i4.i286.image.html:image/html-->
-<img id="i286" src="https://i.imgur.com/yC9n8WB.png"/>
+<img id="i286" src="https://i.imgur.com/pZhkolr.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
-<img id="i181" src="https://i.imgur.com/3o1xfKv.png"/>
+<img id="i181" src="https://i.imgur.com/yQfrnTE.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -858,10 +858,10 @@ url('fonts/') format('svg');
 <div id="i24">En cualquier superficie, hacia cualquier dirección.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/CMoZbdG.jpg"/>
-<!--#/#--><!--#i5.i376.image.html:image/html-->
-<img id="i376" src="https://i.imgur.com/3o1xfKv.png"/>
-<!--#/#--><!--#i5.i378.image.html:image/html-->
-<img id="i378" src="https://i.imgur.com/yC9n8WB.png"/>
+<!--#/#--><!--#i5.i390.image.html:image/html-->
+<img id="i390" src="https://i.imgur.com/pZhkolr.png"/>
+<!--#/#--><!--#i5.i392.image.html:image/html-->
+<img id="i392" src="https://i.imgur.com/yQfrnTE.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -872,12 +872,12 @@ url('fonts/') format('svg');
 <div id="i40"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/Czju32D.jpg"/>
-<!--#/#--><!--#i6.i382.image.html:image/html-->
-<img id="i382" src="https://i.imgur.com/3o1xfKv.png"/>
-<!--#/#--><!--#i6.i384.image.html:image/html-->
-<img id="i384" src="https://i.imgur.com/yC9n8WB.png"/>
-<!--#/#--><!--#i6.i386.image.html:image/html-->
-<img id="i386" src="https://i.imgur.com/AAe65SM.png"/>
+<!--#/#--><!--#i6.i396.image.html:image/html-->
+<img id="i396" src="https://i.imgur.com/pZhkolr.png"/>
+<!--#/#--><!--#i6.i394.image.html:image/html-->
+<img id="i394" src="https://i.imgur.com/yQfrnTE.png"/>
+<!--#/#--><!--#i6.i398.image.html:image/html-->
+<img id="i398" src="https://i.imgur.com/ApY49du.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
@@ -950,21 +950,21 @@ if ('click' === 'click') {
 
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
-/*#/#*//*#i5.i376.image.js:image/base/js*/
+/*#/#*//*#i5.i390.image.js:image/base/js*/
 
-/*#/#*//*#i376.i377.positioning.js:positioning/base/js.2*/
-bmShow('i376');
-/*#/#*//*#i5.i378.image.js:image/base/js*/
+/*#/#*//*#i390.i391.positioning.js:positioning/base/js.2*/
+bmShow('i390');
+/*#/#*//*#i5.i392.image.js:image/base/js*/
 
-/*#/#*//*#i378.i379.positioning.js:positioning/base/js.2*/
-bmShow('i378');
+/*#/#*//*#i392.i393.positioning.js:positioning/base/js.2*/
+bmShow('i392');
 /*#/#*//*#i95.i312.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i95');
 
 el.addEventListener('click', function(e){
     /*#i312.i313.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.adidas.mx/pulseboost-mujer', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.adidas.mx/pulseboost-mujer'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -978,6 +978,18 @@ if ('click' === 'click') {
   
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
+/*#/#*//*#i6.i396.image.js:image/base/js*/
+
+/*#/#*//*#i396.i397.positioning.js:positioning/base/js.2*/
+bmShow('i396');
+/*#/#*//*#i6.i394.image.js:image/base/js*/
+
+/*#/#*//*#i394.i395.positioning.js:positioning/base/js.2*/
+bmShow('i394');
+/*#/#*//*#i6.i398.image.js:image/base/js*/
+
+/*#/#*//*#i398.i399.positioning.js:positioning/base/js.2*/
+bmShow('i398');
 /*#/#*//*#i99.i336.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i99');
@@ -991,18 +1003,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i6.i382.image.js:image/base/js*/
-
-/*#/#*//*#i382.i383.positioning.js:positioning/base/js.2*/
-bmShow('i382');
-/*#/#*//*#i6.i384.image.js:image/base/js*/
-
-/*#/#*//*#i384.i385.positioning.js:positioning/base/js.2*/
-bmShow('i384');
-/*#/#*//*#i6.i386.image.js:image/base/js*/
-
-/*#/#*//*#i386.i387.positioning.js:positioning/base/js.2*/
-bmShow('i386');
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -1077,15 +1077,15 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i376.image.meta:image/meta*/
-name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i376.i377.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i378.image.meta:image/meta*/
+/*#/#*//*#i5.i390.image.meta:image/meta*/
 name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
-/*#/#*//*#i378.i379.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i390.i391.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i5.i392.image.meta:image/meta*/
+name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i392.i393.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
@@ -1102,20 +1102,20 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i382.image.meta:image/meta*/
-name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i382.i383.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i384.image.meta:image/meta*/
+/*#/#*//*#i6.i396.image.meta:image/meta*/
 name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
-/*#/#*//*#i384.i385.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i396.i397.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i386.image.meta:image/meta*/
+/*#/#*//*#i6.i394.image.meta:image/meta*/
+name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i394.i395.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i6.i398.image.meta:image/meta*/
 name: ICONO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
-/*#/#*//*#i386.i387.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i398.i399.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
