--- a/ADIDAS 03/Venetian_Mujer.html
+++ b/ADIDAS 03/Venetian_Mujer.html
@@ -2154,7 +2154,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 65px; height: 44px;
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 67px; height: 45px;
         -ms-transform: translate(0, 0) translate(246px, 428px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(246px, 428px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(246px, 428px) rotate(0deg);
@@ -2228,11 +2228,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
-#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 196px; height: 52px;
-        -ms-transform: translate(0, 0) translate(62px, 333px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(62px, 333px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(62px, 333px) rotate(0deg);
-        transform: translate(0, 0) translate(62px, 333px) rotate(0deg);
+#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 197px; height: 53px;
+        -ms-transform: translate(0, 0) translate(63px, 333px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(63px, 333px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(63px, 333px) rotate(0deg);
+        transform: translate(0, 0) translate(63px, 333px) rotate(0deg);
 }
 /*#/#*//*#i68.text.css:text/base/css*/
 #i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: AdihausDIN-Regular; font-size: 16px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
@@ -2255,11 +2255,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i89.image.css:image/base/css*/
 #i89 { opacity: 1; }
 /*#/#*//*#i89.i90.positioning.css:positioning/base/css.2*/
-#i89 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 46px; height: 46px;
-        -ms-transform: translate(0, 0) translate(62px, 396px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(62px, 396px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(62px, 396px) rotate(0deg);
-        transform: translate(0, 0) translate(62px, 396px) rotate(0deg);
+#i89 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 44px; height: 44px;
+        -ms-transform: translate(0, 0) translate(54px, 405px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(54px, 405px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(54px, 405px) rotate(0deg);
+        transform: translate(0, 0) translate(54px, 405px) rotate(0deg);
 }
 /*#/#*//*#i91.image.css:image/base/css*/
 #i91 { opacity: 1; }
@@ -2328,9 +2328,9 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i74.image.html:image/html-->
 <img id="i74" src="https://i.imgur.com/Qf4miAg.jpg"/>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/3o1xfKv.png"/>
+<img id="i16" src="https://i.imgur.com/yQfrnTE.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
-<img id="i46" src="https://i.imgur.com/yC9n8WB.png"/>
+<img id="i46" src="https://i.imgur.com/pZhkolr.png"/>
 <!--#/#--><!--#i68.text.html:text/html-->
 <div id="i68">Tecnología única para cada paso,
 en cualquier superficie,
@@ -2338,7 +2338,7 @@ hacia cualquier dirección.</div>
 <!--#/#--><!--#i63.text.html:text/html-->
 <div id="i63">FEEL THE BOOST</div>
 <!--#/#--><!--#i89.image.html:image/html-->
-<img id="i89" src="https://i.imgur.com/AAe65SM.png"/>
+<img id="i89" src="https://i.imgur.com/ApY49du.png"/>
 <!--#/#--><!--#i91.image.html:image/html-->
 <img id="i91" src="https://i.imgur.com/kZThkuS.png"/>
 <!--#/#--><!--#i81.shape.html:shape/html-->
