--- a/AMERICAN EAGLE AND AERIE/Venetian_02.html
+++ b/AMERICAN EAGLE AND AERIE/Venetian_02.html
@@ -2430,7 +2430,7 @@ var el = document.getElementById('i2');
 
 el.addEventListener('click', function(e){
     /*#i57.i58.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    
 /*#/#*/
 });
 
@@ -2533,7 +2533,7 @@ var el = document.getElementById('i91');
 
 el.addEventListener('click', function(e){
     /*#i97.i98.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://www.ae.com/intl/en/c/l/aerie/cat4840006?pagetype=clp'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
