--- a/AMERICAN EAGLE AND AERIE/Cube_02.html
+++ b/AMERICAN EAGLE AND AERIE/Cube_02.html
@@ -1055,7 +1055,7 @@ var el = document.getElementById('i228');
 
 el.addEventListener('click', function(e){
     /*#i292.i293.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://www.ae.com/intl/en/c/l/aerie/cat4840006?pagetype=clp'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1134,7 +1134,7 @@ var el = document.getElementById('i346');
 
 el.addEventListener('click', function(e){
     /*#i348.i349.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://www.ae.com/intl/en/c/l/aerie/cat4840006?pagetype=clp'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1217,7 +1217,7 @@ var el = document.getElementById('i362');
 
 el.addEventListener('click', function(e){
     /*#i364.i365.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://www.ae.com/intl/en/c/l/aerie/cat4840006?pagetype=clp'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
