--- a/Beat3/FadeBig2.html
+++ b/Beat3/FadeBig2.html
@@ -368,7 +368,7 @@
              ¡Descarga Beat!
             </span>
             <br/>-->
-             <span class="tgx_text" style="margin-top:-5px; margin-left: -52px; font-size: 125%; text-align: center;">
+             <span class="tgx_text_title tgx_text_medium" style="margin-top:-0px; margin-left: -20px; font-size: 125%; text-align: center;">
                 <p>Viaja por la ciudad. <br> Viajes desde $4,400.</p>
             </span>
   
