--- a/AMERICAN EAGLE AND AERIE/Venetian_02.html
+++ b/AMERICAN EAGLE AND AERIE/Venetian_02.html
@@ -2154,11 +2154,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 175px; height: 44px;
-        -ms-transform: translate(0, 0) translate(143px, 443px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(143px, 443px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(143px, 443px) rotate(0deg);
-        transform: translate(0, 0) translate(143px, 443px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 194px; height: 34px;
+        -ms-transform: translate(0, 0) translate(124px, 449px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(124px, 449px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(124px, 449px) rotate(0deg);
+        transform: translate(0, 0) translate(124px, 449px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2347,7 +2347,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i74.image.html:image/html-->
 <img id="i74" src="https://i.imgur.com/jBA6fjW.png"/>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/Ak6dP9j.png"/>
+<img id="i16" src="https://i.imgur.com/7sHdxv0.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/viACQTG.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
