--- a/AMERICAN EAGLE AND AERIE/Venetian_01.html
+++ b/AMERICAN EAGLE AND AERIE/Venetian_01.html
@@ -2247,10 +2247,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
 #i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 309px; height: 50px;
-        -ms-transform: translate(0, 0) translate(11px, 299px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(11px, 299px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(11px, 299px) rotate(0deg);
-        transform: translate(0, 0) translate(11px, 299px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(9px, 301px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(9px, 301px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(9px, 301px) rotate(0deg);
+        transform: translate(0, 0) translate(9px, 301px) rotate(0deg);
 }
 /*#/#*//*#i106.image.css:image/base/css*/
 #i106 { opacity: 1; }
@@ -2354,7 +2354,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i63">Toma lo que hacemos
 y hazlo tuyo.</div>
 <!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68">¿Quieres ser presentado? Comparte tu look e inspírate con #AExME</div>
+<div id="i68">Comparte tu look
+e inspírate con #AExME</div>
 <!--#/#--><!--#i106.image.html:image/html-->
 <img id="i106" src="https://i.imgur.com/rRS4Sir.gif"/>
 <!--#/#--><!--#i104.image.html:image/html-->
@@ -2599,7 +2600,7 @@ name: Toma lo que hacemos y hazlo tuyo.; customName: false;
 /*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i68.text.meta:text/meta*/
-name: ¿Quieres ser presentado? Comparte tu look e inspírate con #AExME; customName: false;
+name: Comparte tu look e inspírate con #AExME; customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i106.image.meta:image/meta*/
