--- a/Vittorio Forti/FadeGeo300x600.html
+++ b/Vittorio Forti/FadeGeo300x600.html
@@ -427,7 +427,7 @@
        
         <div class="tgx_text"> 
                          <span class="tgx_text_title tgx_text_bold">
-              ¿Y tú, qué accesorio utilizas hoy?
+              ¿Necesitas un cambio de look?
             </span> <br>
                         <span class="tgx_text_medium" style="color: black;line-height:1.1em; font-size:18px; width:95%; text-align:justify;">
                         <p style="margin-top: 10px; line-height: 1.1em; margin-left: 3px;text-align: center">
