--- a/Beat3/Cube.html
+++ b/Beat3/Cube.html
@@ -650,6 +650,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(-6px, 541px) rotate(0deg);
         transform: translate(0, 0) translate(-6px, 541px) rotate(0deg);
 }
+/*#/#*//*#i4.i410.image.css:image/base/css*/
+#i410 { opacity: 1; }
+/*#/#*//*#i410.i411.positioning.css:positioning/base/css.2*/
+#i410 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 122px; height: 39px;
+        -ms-transform: translate(0, 0) translate(174px, 555px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(174px, 555px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(174px, 555px) rotate(0deg);
+        transform: translate(0, 0) translate(174px, 555px) rotate(0deg);
+}
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
 }
@@ -681,14 +690,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i5.i394.image.css:image/base/css*/
-#i394 { opacity: 1; }
-/*#/#*//*#i394.i395.positioning.css:positioning/base/css.2*/
-#i394 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 141px; height: 45px;
-        -ms-transform: translate(0, 0) translate(155px, 553px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(155px, 553px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(155px, 553px) rotate(0deg);
-        transform: translate(0, 0) translate(155px, 553px) rotate(0deg);
+/*#/#*//*#i5.i412.image.css:image/base/css*/
+#i412 { opacity: 1; }
+/*#/#*//*#i412.i413.positioning.css:positioning/base/css.2*/
+#i412 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 122px; height: 39px;
+        -ms-transform: translate(0, 0) translate(174px, 555px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(174px, 555px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(174px, 555px) rotate(0deg);
+        transform: translate(0, 0) translate(174px, 555px) rotate(0deg);
 }
 /*#/#*//*#i5.i406.image.css:image/base/css*/
 #i406 { opacity: 1; }
@@ -739,14 +748,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(-6px, 541px) rotate(0deg);
         transform: translate(0, 0) translate(-6px, 541px) rotate(0deg);
 }
-/*#/#*//*#i6.i398.image.css:image/base/css*/
-#i398 { opacity: 1; }
-/*#/#*//*#i398.i399.positioning.css:positioning/base/css.2*/
-#i398 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 141px; height: 45px;
-        -ms-transform: translate(0, 0) translate(155px, 553px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(155px, 553px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(155px, 553px) rotate(0deg);
-        transform: translate(0, 0) translate(155px, 553px) rotate(0deg);
+/*#/#*//*#i6.i414.image.css:image/base/css*/
+#i414 { opacity: 1; }
+/*#/#*//*#i414.i415.positioning.css:positioning/base/css.2*/
+#i414 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 122px; height: 39px;
+        -ms-transform: translate(0, 0) translate(174px, 555px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(174px, 555px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(174px, 555px) rotate(0deg);
+        transform: translate(0, 0) translate(174px, 555px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -779,9 +788,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/p0XhoKj.jpg"/>
+<img id="i130" src="https://i.imgur.com/V4e5Id2.png"/>
 <!--#/#--><!--#i4.i404.image.html:image/html-->
 <img id="i404" src="https://i.imgur.com/ocSzabB.png"/>
+<!--#/#--><!--#i4.i410.image.html:image/html-->
+<img id="i410" src="https://i.imgur.com/PuxJURZ.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -792,8 +803,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i30"></div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/3c5HT3z.jpg"/>
-<!--#/#--><!--#i5.i394.image.html:image/html-->
-<img id="i394" src="https://i.imgur.com/PuxJURZ.png"/>
+<!--#/#--><!--#i5.i412.image.html:image/html-->
+<img id="i412" src="https://i.imgur.com/PuxJURZ.png"/>
 <!--#/#--><!--#i5.i406.image.html:image/html-->
 <img id="i406" src="https://i.imgur.com/ocSzabB.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
@@ -808,8 +819,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i60" src="https://i.imgur.com/hPlHGtr.jpg"/>
 <!--#/#--><!--#i6.i408.image.html:image/html-->
 <img id="i408" src="https://i.imgur.com/ocSzabB.png"/>
-<!--#/#--><!--#i6.i398.image.html:image/html-->
-<img id="i398" src="https://i.imgur.com/PuxJURZ.png"/>
+<!--#/#--><!--#i6.i414.image.html:image/html-->
+<img id="i414" src="https://i.imgur.com/PuxJURZ.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
@@ -857,6 +868,10 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 
 /*#/#*//*#i404.i405.positioning.js:positioning/base/js.2*/
 bmShow('i404');
+/*#/#*//*#i4.i410.image.js:image/base/js*/
+
+/*#/#*//*#i410.i411.positioning.js:positioning/base/js.2*/
+bmShow('i410');
 /*#/#*//*#i91.i288.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i91');
@@ -877,10 +892,10 @@ if ('click' === 'click') {
 
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
-/*#/#*//*#i5.i394.image.js:image/base/js*/
+/*#/#*//*#i5.i412.image.js:image/base/js*/
 
-/*#/#*//*#i394.i395.positioning.js:positioning/base/js.2*/
-bmShow('i394');
+/*#/#*//*#i412.i413.positioning.js:positioning/base/js.2*/
+bmShow('i412');
 /*#/#*//*#i5.i406.image.js:image/base/js*/
 
 /*#/#*//*#i406.i407.positioning.js:positioning/base/js.2*/
@@ -909,10 +924,10 @@ if ('click' === 'click') {
 
 /*#/#*//*#i408.i409.positioning.js:positioning/base/js.2*/
 bmShow('i408');
-/*#/#*//*#i6.i398.image.js:image/base/js*/
+/*#/#*//*#i6.i414.image.js:image/base/js*/
 
-/*#/#*//*#i398.i399.positioning.js:positioning/base/js.2*/
-bmShow('i398');
+/*#/#*//*#i414.i415.positioning.js:positioning/base/js.2*/
+bmShow('i414');
 /*#/#*//*#i99.i336.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i99');
@@ -968,6 +983,11 @@ name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i404.i405.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i4.i410.image.meta:image/meta*/
+name: ICONOS; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i410.i411.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
@@ -983,10 +1003,10 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i394.image.meta:image/meta*/
+/*#/#*//*#i5.i412.image.meta:image/meta*/
 name: ICONOS; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
-/*#/#*//*#i394.i395.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i412.i413.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i406.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
@@ -1013,10 +1033,10 @@ name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i408.i409.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i398.image.meta:image/meta*/
+/*#/#*//*#i6.i414.image.meta:image/meta*/
 name: ICONOS; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
-/*#/#*//*#i398.i399.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i414.i415.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
